--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
                 <input type="text" id="promo-code" name="promo-code" placeholder="Enter promo code">
                 <button type="button">Apply</button>
             </div>
-            <button class="checkout-button">CHECKOUT</button>
+            <button class="checkout-button"><a href="checkout.html">CHECKOUT</a>
+                </button>
         </div>
     </div>
 
